Wrap fix
Stop wrap overflowing body

--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,7 @@ body {
 }
 
 .wrap {
+	margin: auto;
 	max-width: 480px
 }
 
